fix: error test repository